--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,10 +3,11 @@
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dslist
-spring.datasource.username=root
-spring.datasource.password=root
+#atenção com a porta, 5433 fora do container e 5432 dentro do container
+spring.datasource.url=jdbc:postgresql://localhost:5433/dslist
+spring.datasource.username=postgres
+spring.datasource.password=1234567
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgresSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
